Alembic Not Transferring Materials Per Frame #52240

Closed
opened 2017-08-01 16:53:12 +02:00 by Atomic · 6 comments

System Information
windows 10 gtx1070

Blender Version
2.79 test
Worked: (optional)

Short description of error
Testing 2.79 ability to read Houdini exported Alembic Files.

This image shows the mesh cache transfers ok. Smoothing is being transferred from frame to frame correctly.
biped_flip.gif

However there does seem to be a bug in the material transfer from frame to frame. This mesh has multiple materials. I setup my materials on frame 1. Then when I move to a new frame and the material in slot 1 is applied to the entire mesh. Blender should relay the materials found in each material slot on frame #1 through out the timeline.

Exact steps for others to reproduce the error
Alembic_Material_Transfer_Issue.zip
Just open the attached blend and change the frame. I have included a 12 frame version of the .abc file shown in the GIF. When the frame changes the entire mesh is colorized with the value in material slot 1.

**System Information** windows 10 gtx1070 **Blender Version** 2.79 test Worked: (optional) **Short description of error** Testing 2.79 ability to read Houdini exported Alembic Files. This image shows the mesh cache transfers ok. Smoothing is being transferred from frame to frame correctly. ![biped_flip.gif](https://archive.blender.org/developer/F689183/biped_flip.gif) However there does seem to be a bug in the material transfer from frame to frame. This mesh has multiple materials. I setup my materials on frame 1. Then when I move to a new frame and the material in slot 1 is applied to the entire mesh. Blender should relay the materials found in each material slot on frame #1 through out the timeline. **Exact steps for others to reproduce the error** [Alembic_Material_Transfer_Issue.zip](https://archive.blender.org/developer/F689185/Alembic_Material_Transfer_Issue.zip) Just open the attached blend and change the frame. I have included a 12 frame version of the .abc file shown in the GIF. When the frame changes the entire mesh is colorized with the value in material slot 1.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AtomP

Added subscriber: @AtomP
Sybren A. Stüvel was assigned by Bastien Montagne 2017-08-01 22:44:07 +02:00
Author

I tried again at transferring a Houdini based animation to Blender via the Alembic file format. I discovered that if I actually give every Houdini object I want to transfer an attribute called name that Blender will create a Blender object for each Houdini object named. This solves the multiple material transfer problem I encountered previously as long as each object has only one material.

This test also shows that you can transfer animated color information from Houdini to Blender as shown in the changing color of the fluid. However, this animated attribute transfer only seems to work for a few hard coded attributes in Blender (i.e. Cd). Arbitrary attribute import does not seem to be supported yet (i.e. my_float).
mocapbiped_fluid_walk_CD.gif

I'm an not sure if this should still be considered a bug. But some instructions may need to be offered to end users on how to prepare objects in their host application before exporting an Alembic file for use in Blender.

I tried again at transferring a Houdini based animation to Blender via the Alembic file format. I discovered that if I actually give every Houdini object I want to transfer an attribute called *name* that Blender will create a Blender object for each Houdini object named. This solves the multiple material transfer problem I encountered previously as long as each object has only one material. This test also shows that you can transfer animated color information from Houdini to Blender as shown in the changing color of the fluid. However, this animated attribute transfer only seems to work for a few hard coded attributes in Blender (i.e. *Cd*). Arbitrary attribute import does not seem to be supported yet (i.e. *my_float*). ![mocapbiped_fluid_walk_CD.gif](https://archive.blender.org/developer/F695307/mocapbiped_fluid_walk_CD.gif) I'm an not sure if this should still be considered a bug. But some instructions may need to be offered to end users on how to prepare objects in their host application before exporting an Alembic file for use in Blender.

I can confirm this as a bug.

rendered-viewport0001-0012.mp4

Here I've imported your ABC file (F689185) into Blender (8c488cb97f), set viewport colours for the materials, and dragged the geo_EXPORT object to camera left. That object shows the problems material problems, whereas the geo_skin object works just fine. A bit more digging shows that geo_EXPORT changes its number of vertices during the animation. This causes Blender to rebuild the mesh, after which the materials aren't applied any more (causing the default to the first material slot).

I can confirm this as a bug. [rendered-viewport0001-0012.mp4](https://archive.blender.org/developer/F701907/rendered-viewport0001-0012.mp4) Here I've imported your ABC file ([F689185](https://archive.blender.org/developer/F689185/Alembic_Material_Transfer_Issue.zip)) into Blender (8c488cb97f0c), set viewport colours for the materials, and dragged the `geo_EXPORT` object to camera left. That object shows the problems material problems, whereas the `geo_skin` object works just fine. A bit more digging shows that `geo_EXPORT` changes its number of vertices during the animation. This causes Blender to rebuild the mesh, after which the materials aren't applied any more (causing the default to the first material slot).

This issue was referenced by 45d7513f84

This issue was referenced by 45d7513f84bd3f3ee52207d4373e2ff980c954aa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52240
No description provided.